# 808XMidtermProject

./: .travis.yml  CMakeLists.txt  readme.md
Outputs/: centroids.csv
app/: CMakeLists.txt  ObjectDetector.cpp  OutputWriter.cpp  SiftDetector.cpp  VideoFrame.cpp  VisionManager.cpp  main.cpp
doc/: Doxyfile
doc/html/: _object_detector_8h_source.html  _output_writer_8h_source.html  _sift_detector_8h_source.html  _video_frame_8h_source.html  _vision_manager_8h_source.html  annotated.html  class_object_detector-members.html  class_object_detector.html  class_output_writer-members.html  class_output_writer.html  class_sift_detector-members.html  class_sift_detector.html  class_video_frame-members.html  class_video_frame.html  class_vision_manager-members.html  class_vision_manager.html  classes.html  dir_42b0660d90483c4ee28e7e7ce7dcaa02.html  dir_68171bc1314d367b6b34b8a340640c39.html  dir_91df89f849e462a15922e467f9c22652.html  files.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  index.html
doc/html/search/: all_0.js  all_1.js  all_2.js  (+22 more)
doc/latex/: annotated.tex  class_object_detector.tex  class_output_writer.tex  class_sift_detector.tex  class_video_frame.tex  class_vision_manager.tex  dir_42b0660d90483c4ee28e7e7ce7dcaa02.tex  dir_68171bc1314d367b6b34b8a340640c39.tex  dir_91df89f849e462a15922e467f9c22652.tex  hierarchy.tex  refman.tex
include/: ObjectDetector.h  OutputWriter.h  SiftDetector.h  VideoFrame.h  VisionManager.h
results/: cppcheckoutout.txt  cpplintoutput.txt
test/: CMakeLists.txt  ObjectDetection.cpp  main.cpp
